--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -26,9 +26,12 @@
     }
 
     &__logo {
-        font-size: 2rem;
+        font-size: 1.3rem;
         text-decoration: none;
 
+        @include tablet {
+            font-size: 2rem;
+        }
 
         &:hover {
             cursor: default;
