Change logo image

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -59,6 +59,14 @@
     &__text {
         align-items: center;
         text-align: center;
+
+        @include tablet {
+            flex: 0.4;
+        }
+
+        @include desktop {
+            flex: 1;
+        }
     }
 
     &__linkedin-logo {
