Add aboutme comp

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,7 +3,7 @@
 
 .nav {
     position: relative;
-    padding: 2rem;
+    padding: 2rem 2rem 0 2rem;
 
     @include desktop {
         padding: 3.5rem;
