--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,29 +3,34 @@
 
 .header {
 
-    // padding-top: 4vh;
-    // height: 96vh;
-    // margin: 0 10rem;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     min-height: fit-content;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    // gap: 5rem;
-    // height: 80vh;
 
     @include tablet {
-        flex-direction: row;
-        align-items: center;
-        margin: 2rem 4rem;
+        height: 80vh;
+        margin: 0 4rem;
     }
 
     @include desktop {
         padding-top: 4vh;
         height: 96vh;
         margin: 0 10rem;
-        // box-sizing: border-box;
-        // min-height: fit-content;
+
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+       
+        @include tablet {
+            flex-direction: row;
+            align-items: center;
+            gap: 2rem;
+        }
     }
 
     &__profile {
@@ -49,6 +54,7 @@
 
         @include tablet {
             width: 20rem;
+
         }
 
         @include desktop {
@@ -69,23 +75,13 @@
         }
     }
 
-    &__linkedin-logo {
+    &__logo {
         height: 2rem;
         width: 2rem;
 
         @include tablet {
             height: 3rem;
             width: 3rem; 
-        }
-    }
-
-    &__github-logo {
-        height: 1.8rem;
-        width: 1.8rem;
-
-        @include tablet {
-            height: 2.7rem;
-            width: 2.7rem; 
         }
     }
 
@@ -126,6 +122,7 @@
         display: flex;
         justify-content: center;
         margin-top: 1rem;
+        gap: 0.5rem;
 
         @include tablet {
             gap: 1rem;
