--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -3,7 +3,7 @@
 
 $main-typeface: 'Poppins', Arial, Helvetica, sans-serif;
 
-$text-color : rbg(85, 85, 85);
+$text-color : #555555;
 $black : black;
 $white: white;
 $link-hover: grey;
