--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -16,13 +16,13 @@
         }
 
         p {
-            margin: 0
+            margin: 0;
+            font-weight: 500;
         }
 
         h1 {
             margin-top: 1rem;
             margin-bottom: 0;
-            font-size: 1.5rem;
         }
     }
     
