--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -26,6 +26,10 @@ a, button {
 h1 {
     font-size: 1.5rem;
 
+    @include tablet {
+        font-size: 2rem;
+    }
+
     @include desktop {
         font-size: 3rem;
     }
