Add projects comp

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -115,11 +115,11 @@
 
     }
 
-    &__arrow {
-        margin: 1rem auto;
-        cursor: pointer;
-        position: absolute;
-        right: 1rem;
-        width: 2rem;
-    }
+    // &__arrow {
+    //     margin: 1rem auto;
+    //     cursor: pointer;
+    //     position: absolute;
+    //     right: 1rem;
+    //     width: 2rem;
+    // }
 }
