--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -34,3 +34,11 @@ h1 {
         font-size: 3rem;
     }
 }
+
+.arrow {
+    margin: 1rem auto;
+    cursor: pointer;
+    position: absolute;
+    right: 1rem;
+    width: 2rem;
+}
