--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -14,8 +14,9 @@
   }
 }
 
-@mixin burger-menu {
-  @media (max-width: $burger-menu-breakpoint) {
-    @content;
-  }
+@mixin border-box {
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  border-radius: 2rem;
+  text-align: center;
 }
