--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -16,21 +16,27 @@
         margin: 1rem;
     }
 
+    &__exp-containers {
+        display: flex;
+        justify-content: center;
+    }
+
     &__details-containers {
         display: flex;
         flex-direction: column;
         padding: 2rem;
         gap: 2rem;
     
-        @include tablet {
-            padding: 2rem 11rem;
-        }
+        // @include tablet {
+        //     padding: 2rem 11rem;
+        // }
 
         @include desktop {
             flex-direction: row;
             justify-content: space-around;
-            padding: 2rem 6rem;
+            padding: 2rem 4rem;
             gap: 3rem;
+            width: 80rem;
         }
     }
 
@@ -41,9 +47,14 @@
         border-color: rgb(163, 163, 163);
         border-radius: 2rem;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
 
         @include desktop {
-            padding: 2rem 4rem;
+            padding: 2rem 3.5rem;
+            flex: 2;
         }
     }
 
@@ -67,6 +78,7 @@
         display: flex;
         text-align: center;
         flex-direction: column;
+        align-items: center;
         
 
         @include desktop {
@@ -83,10 +95,16 @@
         justify-content: center;
         align-items: center;
         gap: 1rem;
+        width: 10rem;
 
         @include tablet {
-            flex: 2;
-            gap: 0;
+            width: 12rem;
+        }
+
+        @include desktop {
+            justify-content: flex-start;
+            width: 11rem;
+            gap:0;
         }
     }
 
@@ -97,29 +115,26 @@
     }
 
     &__skill {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+
         @include tablet {
-            flex: 0.3;
+            flex: 2;
         }
-    
+
         @include desktop {
-            flex: 0.1rem;
+            justify-content: flex-start;
         }
     }
 
     &__text {
         font-size: 1.2rem;
+        flex: 1;
 
         @include tablet {
             font-size: 1.5rem;
         }
-
     }
-
-    // &__arrow {
-    //     margin: 1rem auto;
-    //     cursor: pointer;
-    //     position: absolute;
-    //     right: 1rem;
-    //     width: 2rem;
-    // }
 }
