--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -24,14 +24,24 @@
             justify-content: center;
             gap: 2rem;
         }
+
+        @include desktop {
+            gap: 3rem;
+            padding: 2rem 7rem;
+        }
     }
 
     &__details {
         @include border-box;
         margin-bottom: 1rem;
         padding: 1rem;
+        box-sizing: border-box;
 
         @include tablet {
+            padding: 1rem 2rem 1.5rem 2rem;
+        }
+
+        @include desktop {
             padding: 2rem 3rem;
         }
     }
@@ -41,16 +51,16 @@
     }
 
     &__img {
-        width: 100%;
+        width: 90%;
         border-radius: 2rem;
         border: #A3A3A3 1px solid;
 
         @include tablet {
-            width: 40vw;
+            width: 25vw;
         }
 
         @include desktop {
-            width: 30vw;
+            width: 20vw;
         }
     }
 
@@ -64,13 +74,18 @@
         border: #A3A3A3 2px solid;
         background:none;
         font-weight: 600;
-        padding: 10px;
-        width: 7rem;
+        padding: 8px 4px;
+        width: 6rem;
         border-radius: 2rem;
 
         @include tablet {
-            padding: 1rem;
+            padding: 10px;
+            width: 7rem;
+        }
+
+        @include desktop {
             width: 8rem;
+            padding: 1rem;
         }
 
         &:hover {
@@ -82,6 +97,11 @@
         &:disabled {
             border: #ccc 2px solid;
             cursor: not-allowed;
+
+            &:hover {
+                background-color: #f5f5f5;
+                color: #ccc; 
+            }
         }
     }
 }
