--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -25,16 +25,63 @@
             margin-bottom: 0;
         }
     }
-    
-    &__details-container {
+
+    &__me-section {
         display: flex;
         flex-direction: column;
-        padding: 1.5rem;
+    }
+
+    &__photo-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    &__photo {
+        height: 25vh;
+        background: #dbd7e1;
+        border-radius: 1rem;
+    }
+    
+    // &__details-container {
+    //     display: flex;
+    //     flex-direction: column;
+    //     padding: 1.5rem;
+
+    //     @include tablet {
+    //         flex-direction: row;
+    //         gap: 2rem;
+    //         padding: 2rem;
+    //     }
+
+    //     @include desktop {
+    //         padding: 2.5rem 6rem;
+    //     }
+    // }
+
+    &__details-container {
+        padding: 2rem;
 
         @include tablet {
-            flex-direction: row;
+            display: flex;
+            justify-content: center;
+        }
+
+    }
+
+    &__containers {
+
+        padding: 1rem 2rem;
+
+        @include tablet {
+            display: flex;
+            justify-content: center;
             gap: 2rem;
-            padding: 2rem;
+            // width: 55rem;
+        }
+
+        @include desktop {
+            gap: 3rem;
+            // width: 66rem; 
         }
     }
 
@@ -54,20 +101,34 @@
     }
 
     &__title {
-        font-size: 1.5rem;
+        font-size: 1rem;
         margin: 0;
+
+        @include tablet {
+            font-size: 1.5rem;
+        }
     }
 
     &__info {
         margin: 0;
-        font-size: 1rem;
+        font-size: 0.813rem;
+
+        @include tablet {
+            font-size: 1rem;
+        }
     }
 
-    &__arrow {
-        margin: 1rem auto;
-        cursor: pointer;
-        position: absolute;
-        right: 1rem;
-        width: 2rem;
+    &__profile {
+        padding: 0 2rem;
+        text-align: justify;
+
+
+        @include tablet {
+            padding: 3rem;
+        }
+
+        @include desktop {
+            padding: 2rem 6rem;
+        }
     }
 }
