--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -26,17 +26,13 @@
         flex-direction: column;
         padding: 2rem;
         gap: 2rem;
-    
-        // @include tablet {
-        //     padding: 2rem 11rem;
-        // }
 
         @include desktop {
             flex-direction: row;
             justify-content: space-around;
-            padding: 2rem 4rem;
+            // padding: 2rem 4rem;
             gap: 3rem;
-            width: 80rem;
+            width: 67rem;
         }
     }
 
@@ -53,8 +49,7 @@
 
 
         @include desktop {
-            padding: 2rem 3.5rem;
-            flex: 2;
+            padding: 2rem;
         }
     }
 
@@ -84,7 +79,7 @@
         @include desktop {
             flex-wrap: wrap;
             flex-direction: row;
-            gap:2.5rem;
+            gap:0.5rem;
             align-items: flex-start;
             justify-content: space-around;
         }
