--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,29 @@
 @use './styles/partials/global' as *;
+@use './styles/partials/mixins' as *;
+@use './styles/partials/variables' as *;
+
+#about {
+    height: 115vh;
+
+    @include tablet {
+        height: 90vh;
+    }
+
+}
+
+
+#projects {
+    height: 90vh;
+}
+
+#experience {
+    height: 145vh;
+
+    @include tablet {
+        height: 155vh;
+    }
+
+    @include desktop {
+        height: 90vh;
+    }
+}
