Adjust styling for project section

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -11,3 +11,4 @@ $link-hover: grey;
 // MEDIA QUERIES
 $tablet-breakpoint: 47.938rem; /* 767px */
 $desktop-breakpoint: 80rem; /* 1280px */
+$bigger-mobile-breakpoint: 420px;
