--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -16,9 +16,13 @@
 
     &__details-container {
         padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
 
         @include tablet {
-            display: flex;
+            flex-direction: row;
             flex-wrap: wrap;
             align-items: center;
             justify-content: center;
@@ -28,16 +32,23 @@
 
     &__details {
         @include border-box;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
         padding: 1rem;
         box-sizing: border-box;
+        
+        @include bigger-mobile {
+            width: 20rem;
+        }
 
         @include tablet {
             padding: 1rem 2rem 1.5rem 2rem;
+            margin-bottom: 1rem;
+            width: 40%;
         }
 
         @include desktop {
             padding: 2rem;
+            width: 23rem;
         }
     }
 
