--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@mixin bigger-mobile {
+  @media (min-width: $bigger-mobile-breakpoint) {
+    @content;
+  }
+}
+
 @mixin border-box {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
