Add arrow component

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,11 @@
 @use './styles/partials/variables' as *;
 
 // #about {
-//     height: 115vh;
+//     // height: 115vh;
 
-//     @include tablet {
-//         height: 90vh;
-//     }
+//     // @include tablet {
+//     //     height: 90vh;
+//     // }
 
 // }
 
