--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -43,7 +43,7 @@
         @include tablet {
             padding: 1rem 2rem 1.5rem 2rem;
             margin-bottom: 1rem;
-            width: 40%;
+            width: 28%;
         }
 
         @include desktop {
@@ -109,5 +109,10 @@
                 color: #ccc; 
             }
         }
+    }
+
+    &__arrow-container {
+        display: flex;
+        justify-content: flex-end;
     }
 }
