--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -11,4 +11,10 @@ $link-hover: grey;
 // MEDIA QUERIES
 $tablet-breakpoint: 47.938rem; /* 767px */
 $desktop-breakpoint: 80rem; /* 1280px */
-$bigger-mobile-breakpoint: 420px;
+$bigger-mobile-breakpoint: 550px;
+$bigger-desktop-breakpoint: 1435px;
+
+
+//Font-size
+$mobi-paragraph: 0.818rem;
+$tablet-paragraph: 1rem;
