--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -2,7 +2,6 @@
 @use '../../../styles/partials/variables' as *;
 
 .about {
-    // position: relative;
 
     &__headline {
         display: flex;
@@ -13,23 +12,27 @@
         @include tablet {
             margin-top: 3.5rem;
         }
+    }
 
-        p {
-            margin: 0;
-        }
+    &__text-p1 {
+        margin: 0;
+    }
 
-        h1 {
-            margin-top: 1rem;
-            margin-bottom: 0;
-        }
+    &__title {
+        margin-top: 1rem;
+        margin-bottom: 0;
     }
 
     &__me-section {
         display: flex;
         flex-direction: column;
 
+        @include bigger-mobile {
+            padding: 2rem 5rem;
+        }
+
         @include tablet {
-            padding: 2rem;
+            padding: 2rem 3rem;
         }
 
         @include desktop {
@@ -53,16 +56,20 @@
     }
 
     &__photo {
-        height: 25vh;
+        height: 10rem;
         background: #dbd7e1;
         border-radius: 1rem;
 
         @include tablet {
-            height: 20rem;
+            height: 15rem;
         }
 
         @include desktop {
             height: 25rem;
+        }
+
+        @include bigger-desktop {
+            height: 19rem;
         }
     }
 
@@ -130,6 +137,9 @@
         padding: 0 2rem;
         text-align: justify;
 
+        @include bigger-mobile {
+            padding: 0;
+        }
 
         @include tablet {
             padding:0;
