--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -15,22 +15,29 @@
         margin: 1rem;
     }
 
-    &__exp-containers {
-        display: flex;
-        justify-content: center;
-    }
-
     &__details-containers {
         display: flex;
         flex-direction: column;
         padding: 2rem;
         gap: 2rem;
 
-        @include desktop {
+        @include bigger-mobile {
+            padding: 2rem 7rem;
+        }
+
+        @include tablet {
             flex-direction: row;
             justify-content: space-around;
-            gap: 3rem;
-            width: 67rem;
+            padding: 2rem 3rem;
+        }
+
+        @include desktop {
+            padding: 2rem 8rem;
+        }
+
+        @include bigger-desktop {
+            padding: 2rem 9rem;
+            flex: 1;
         }
     }
 
@@ -45,9 +52,17 @@
         flex-direction: column;
         justify-content: center;
 
+        @include tablet {
+            padding: 2rem 4rem;
+        }
 
         @include desktop {
             padding: 2rem;
+            width: 100%;
+        }
+
+        @include bigger-desktop {
+            padding: 3rem;
         }
     }
 
@@ -123,12 +138,7 @@
     }
 
     &__text {
-        font-size: 1.2rem;
         flex: 1;
-
-        @include tablet {
-            font-size: 1.5rem;
-        }
     }
 
     &__arrow-container {
