--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -20,13 +20,21 @@
         flex-direction: column;
         align-items: center;
 
+        @include bigger-mobile {
+            padding: 2rem 5rem;
+        }
 
         @include tablet {
             flex-direction: row;
             flex-wrap: wrap;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             gap: 2rem;
+            padding: 2rem 3rem;
+        }
+
+        @include desktop {
+            padding: 2rem 8rem;
         }
     }
 
@@ -37,18 +45,18 @@
         box-sizing: border-box;
         
         @include bigger-mobile {
-            width: 20rem;
+            width: 80%;
         }
 
         @include tablet {
             padding: 1rem 2rem 1.5rem 2rem;
             margin-bottom: 1rem;
-            width: 28%;
+            width: 47%;
         }
 
         @include desktop {
             padding: 2rem;
-            width: 23rem;
+            width: 20rem;
         }
     }
 
@@ -66,7 +74,7 @@
         }
 
         @include desktop {
-            width: 20vw;
+            width: 14rem;
         }
     }
 
