--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -17,6 +17,11 @@ html {
 
 p {
     color: $text-color;
+    font-size: $mobi-paragraph;
+
+    @include tablet {
+        font-size: $tablet-paragraph;
+    }
 }
 
 a, button {
@@ -32,5 +37,21 @@ h1 {
 
     @include desktop {
         font-size: 3rem;
+    }
+}
+
+h2 {
+    font-size: 1.5rem;
+
+    @include tablet {
+        font-size: 1.7rem;
+    }
+}
+
+h3 {
+    font-size: 1.2rem;
+
+    @include tablet {
+        font-size: 1.5rem;
     }
 }
