--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -20,6 +20,12 @@
   }
 }
 
+@mixin bigger-desktop {
+  @media (min-width: $bigger-desktop-breakpoint) {
+    @content;
+  }
+}
+
 @mixin border-box {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
