--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -36,7 +36,8 @@
         }
 
         @include bigger-desktop {
-            padding: 2rem 9rem;
+            padding: 2rem 14rem;
+            gap: 3rem;
             flex: 1;
         }
     }
