--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -93,11 +93,11 @@
     }
 
     &__text-p1 {
-        font-size: 1rem;
+        font-size: $mobi-hero-text;
         margin-bottom: 1rem;
 
         @include desktop {
-            font-size: 1.75rem;
+            font-size: $tablet-hero-text;
         }
     }
 
