--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -22,7 +22,11 @@
     }
 
     &__link {
-        font-size: 1.5rem;
+        font-size: $mobi-link;
+
+        @include tablet {
+            font-size: $tablet-link;
+        }
     }
 
     &__logo {
@@ -92,6 +96,6 @@ a {
         color: $link-hover;
         text-decoration: underline;
         text-underline-offset: 1rem;
-        text-decoration-color:  rgb(181, 181, 181);
+        text-decoration-color: $link-color;
     }
 }
