--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -97,7 +97,7 @@
     }
 
     &__btn {
-        border: #A3A3A3 2px solid;
+        border: $light-grey-border;
         background:none;
         font-weight: 600;
         padding: 8px 4px;
@@ -116,17 +116,17 @@
 
         &:hover {
             cursor: pointer;
-            background: rgb(53, 53, 53);
+            background: $hover-btn;
             color: $white;
         }
 
         &:disabled {
-            border: #ccc 2px solid;
+            border: $project-border;
             cursor: not-allowed;
 
             &:hover {
-                background-color: #f5f5f5;
-                color: #ccc; 
+                background-color: $disable-btn;
+                color: $project-btn-text; 
             }
         }
     }
