--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -15,8 +15,12 @@ $bigger-desktop-breakpoint: 89.688rem;
 $mobi-hero-text: 1rem;
 $tablet-hero-text: 1.75rem;
 
+$mobi-hero-p2: 1.2rem;
+$tablet-hero-p2: 2rem;
+
 $mobi-hero-title: 1.5rem;
-$tablet-hero-title: 3rem;
+$tablet-hero-title: 2rem;
+$desktop-hero-title: 3rem;
 
 $mobi-paragraph: 0.818rem;
 $tablet-paragraph: 1rem;
@@ -35,3 +39,14 @@ $white: white;
 $link-hover: grey;
 $photo-background: #dbd7e1;
 $link-color: #b5b5b5;
+$button-hero:#353535;
+$hover-btn: #353535;
+$disable-btn: #f5f5f5;
+$project-btn-text: #ccc;
+
+
+//Border Box
+$dark-grey-border: #353535 0.1rem solid;
+$white-border: #ffffff 0.1rem solid;
+$light-grey-border: #a3a3a3 2px solid;
+$project-border: #ccc 2px solid;
