--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,7 +1,8 @@
 @use './typography' as *;
 
 
-$main-typeface: 'Poppins', Arial, Helvetica, sans-serif;
+$main-typeface: 'Geagu', Arial, Helvetica, sans-serif;
+$body-typeface: 'Poppins', Arial, sans-serif;
 
 
 // MEDIA QUERIES
