--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -6,12 +6,13 @@
 
     &__text-p1 {
         text-align: center;
+        margin: 0;
     }
     
 
     &__title {
         text-align: center;
-        margin: 1rem;
+        margin: 0;
     }
 
     &__details-containers {
