--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,17 +9,18 @@
     justify-content: center;
     box-sizing: border-box;
     min-height: fit-content;
+    background-image: url('../../assets/images/header-background.jpg');
 
     @include tablet {
         height: 80vh;
-        padding-bottom: 15vh;
-        margin: 0 4rem;
+        // padding-bottom: 15vh;
+        // margin: 0 4rem;
     }
 
     @include desktop {
-        padding-bottom: 35vh;
-        height: 96vh;
-        margin: 0 10rem;
+        // padding-bottom: 35vh;
+        height: 80vh;
+        // margin: 0 10rem;
 
     }
 
@@ -148,6 +149,7 @@
         padding: 10px;
         width: 7rem;
         border-radius: 2rem;
+        font-family: 'Poppins';
 
         @include tablet {
             padding: 1rem;
