--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -8,7 +8,9 @@
 }
 
 body, html {
-    font-family: $main-typeface;
+    font-family: "Gaegu";
+    background-color: rgb(251, 251, 251) ;
+    color:rgb(34, 40, 49);
 }
 
 html {
