--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -20,6 +20,7 @@ html {
 p {
     color: $text-color;
     font-size: $mobi-paragraph;
+    font-family: "Poppins";
 
     @include tablet {
         font-size: $tablet-paragraph;
