--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -15,13 +15,12 @@
         margin: 0;
     }
 
-    &__education {
-        padding: 1rem;
+    &__subheader {
+        padding: 0 1rem 0 1rem;
     }
 
     &__container {
         display: flex;
-        justify-content: center;
         align-items: center;
         gap: 2rem;
     }
@@ -30,10 +29,14 @@
         width: auto;
         height: 2.5rem;   
 
-        &--padding {
-            padding-left: 0.2rem;
+        &--padding{
+            padding-left: 0.4rem;
+        }
+        &--smaller{
+            height: 2.25rem;
         }
     }
+    
     &__list {
         list-style: none;
         padding: 0;
