--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -33,7 +33,6 @@
     }
 
     &__menu{
-        // position: absolute;
         list-style: none;
         display: flex;
         flex-wrap: wrap;
@@ -63,6 +62,16 @@
         object-fit: contain;
     }
     
+    &__other-section {
+        list-style: none;
+    }
 
+    &__other-title {
+        font-weight: 400;
+    }
+
+    &--other-text {
+        text-align: center;
+    }
 
 }
