--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -3,9 +3,6 @@
 
 
 .dropdown {
-    // position: relative;
-    // display: inline-block;
-    // margin-top: 20px;
     padding: 0.5rem 1.5rem;
 
     &__btn {
@@ -19,8 +16,6 @@
     &__menu-container{
         background: white;
         border: 1px solid #ccc;      
-        z-index: 100;
-        // width: 220px;
         border-radius: 8px;
         box-shadow: 0 8px 16px rgba(0,0,0,0.15);
     }
@@ -47,6 +42,8 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        flex-wrap: wrap;
+        max-width: 115px;
         gap: 1rem;
         margin-bottom: 10px;
         font-size: 16px;
@@ -60,6 +57,16 @@
         width: auto;
         height: 3.125rem;
         object-fit: contain;
+    }
+
+    &__icon-emoji{
+        width: auto;
+        text-align: center;
+    }
+
+    &__skill-name{
+        text-align: center;
+
     }
     
     &__other-section {
