--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -3,7 +3,7 @@
 
 
 .dropdown {
-    padding: 0.5rem 1.5rem;
+   
 
     &__btn {
         padding: 12px 24px;
@@ -36,6 +36,14 @@
         margin-top: 10px;
         padding: 12px;
         
+    }
+
+    &__arrow{
+        transition: transform 0.3s ease;
+
+        &.open{
+            transform: rotate(180deg);
+        }
     }
 
     &__item{
@@ -75,6 +83,7 @@
 
     &__other-title {
         font-weight: 400;
+        margin-top: 0;
     }
 
     &--other-text {
