--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -6,7 +6,7 @@
 
     &__text-p1 {
         text-align: center;
-        margin: 0;
+        margin: 1rem 0 0 0;
     }
     
 
@@ -16,7 +16,7 @@
     }
 
     &__subheader {
-        padding: 0 1rem 0 1rem;
+        padding: 0 1rem;
     }
 
     &__container {
@@ -173,5 +173,9 @@
     &__arrow-container {
         display: flex;
         justify-content: flex-end;
+    }
+
+    &__skills-section{
+        padding: 1rem;
     }
 }
