--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -41,27 +41,69 @@
         color: black;
         transform: translateY(35%); 
         transition: transform 0.4s ease; 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
     }
 
     &__container:hover &__hover-box{
         transform: translateY(0);
-        height: 100%;
+        height: 112%;
     }
 
     &__summary-title {
         font-size: 1.5rem;
         font-weight: bold;
+        margin-bottom: 10px;
     }
       
     &__summary-text {
-        font-size: 0.8rem;
+        font-size: 0.75rem;
+    }
+
+    &__subheader {
+        margin: 0;
+    }
+
+    &__tools-scroll-wrapper{
+        overflow: hidden;
+        width: 100%;
+    }
+
+
+
+    &__tools-list{
+        display: flex;
+        animation: scroll-badges 10s linear infinite;
+        will-change: transform;
+        width: max-content;
+        height: 1.4rem;
+    }
+   
+    @keyframes scroll-badges {
+        0% {
+            transform: translateX(0%);
+        }
+        100% {
+            transform: translateX(-50%);
+        }
+    }
+
+    &__strip{
+        display: flex;
+    }
+
+    &___badge {
+        height: 30px;
+        width: auto;
+        display: block;
+        flex-shrink: 0;
     }
 
     &__button-container {
         display: flex;
         justify-content: space-evenly;
-        margin-top: 4rem;
-        
+        margin-top: 10px;
     }
 
     &__button {
