--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -6,9 +6,16 @@
     flex-direction: column;
     align-items: center;
 
+    @include tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2rem;
+    }
+
     &__container {
         position: relative;
-        width: 300px;
+        width: 80vw;
         overflow: hidden;
         border: 1px solid #ccc;
         border-radius: 12px;
@@ -19,15 +26,22 @@
         &:hover{
             transform: scale(1.05); 
         }
+
+        @include tablet {
+            width: 35vw;
+        }
     }
 
     &__image{
         width: 100%;
-        object-fit: cover;
-        display: block;
+        height: 17rem;
+        background-size: cover;
         border-top-left-radius: 12px;
         border-top-right-radius: 12px;
         
+        @include tablet {
+            height: 25rem;
+        }
     }
 
     &__hover-box{
@@ -43,18 +57,19 @@
         transition: transform 0.4s ease; 
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-between;
     }
 
     &__container:hover &__hover-box{
         transform: translateY(0);
-        height: 112%;
+        height: 100%;
     }
 
     &__summary-title {
         font-size: 1.5rem;
         font-weight: bold;
         margin-bottom: 10px;
+       
     }
       
     &__summary-text {
@@ -63,6 +78,7 @@
 
     &__subheader {
         margin: 0;
+
     }
 
     &__tools-scroll-wrapper{
