--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -13,6 +13,15 @@
         gap: 2rem;
     }
 
+    @include desktop {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: auto;
+        max-width: 800px;
+        margin: 0 auto;
+
+    }
+
     &__container {
         position: relative;
         width: 80vw;
@@ -22,6 +31,7 @@
         background: white;
         margin-bottom: 1rem;
         transition: transform 0.4s ease;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.09);
 
         &:hover{
             transform: scale(1.05); 
@@ -30,11 +40,15 @@
         @include tablet {
             width: 35vw;
         }
+
+        @include desktop {
+            width: 18rem;
+        }
     }
 
     &__image{
         width: 100%;
-        height: 17rem;
+        height: 20rem;
         background-size: cover;
         border-top-left-radius: 12px;
         border-top-right-radius: 12px;
@@ -49,7 +63,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 100px;
+        height: 6.25rem;
         padding: 1rem;
         background: white;
         color: black;
@@ -58,6 +72,10 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        @include desktop {
+            height: 9.063rem;
+        }
     }
 
     &__container:hover &__hover-box{
@@ -70,6 +88,9 @@
         font-weight: bold;
         margin-bottom: 10px;
        
+        @include desktop {
+            font-size: 2rem;
+        }
     }
       
     &__summary-text {
