--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -73,6 +73,10 @@
         flex-direction: column;
         justify-content: space-between;
 
+        @include tablet {
+            height: 8.25rem;
+        }
+
         @include desktop {
             height: 9.063rem;
         }
@@ -87,19 +91,25 @@
         font-size: 1.5rem;
         font-weight: bold;
         margin-bottom: 10px;
+        color: #648cb6;
        
-        @include desktop {
+        @include tablet {
             font-size: 2rem;
         }
     }
       
     &__summary-text {
         font-size: 0.75rem;
+        color: $text-color;
+
+        @include tablet {
+            font-size: 0.875rem;
+        }
     }
 
     &__subheader {
         margin: 0;
-
+        color:#648cb6;
     }
 
     &__tools-scroll-wrapper{
@@ -107,14 +117,16 @@
         width: 100%;
     }
 
-
-
     &__tools-list{
         display: flex;
         animation: scroll-badges 10s linear infinite;
         will-change: transform;
         width: max-content;
         height: 1.4rem;
+
+        @include tablet {
+            height: 3rem;
+        }
     }
    
     @keyframes scroll-badges {
@@ -131,16 +143,15 @@
     }
 
     &___badge {
-        height: 30px;
         width: auto;
         display: block;
         flex-shrink: 0;
     }
 
     &__button-container {
-        display: flex;
+        display: flex;  
+        gap: 1rem;
         justify-content: space-evenly;
-        margin-top: 10px;
     }
 
     &__button {
@@ -148,8 +159,14 @@
         background-color: #ff8559;
         border: none;
         border-radius: 12px;
-        padding: 0.25rem 1rem;
         font-family: "Gaegu";
         font-size: 1rem;
+        cursor: pointer;
+        width: 100%;
+        font-weight: 600;
+
+        @include tablet {
+            font-size: 1.2rem;
+        }
     }
 }
