--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -19,8 +19,16 @@
     }
 
     &__title {
-        margin-top: 1rem;
-        margin-bottom: 0;
+        margin: 0;
+        font-size: 1.5rem;
+
+        @include tablet {
+            font-size: 2rem;
+        }
+
+        @include desktop {
+            font-size: 3rem;
+        }
     }
 
     &__me-section {
@@ -28,11 +36,11 @@
         flex-direction: column;
 
         @include bigger-mobile {
-            padding: 2rem 5rem;
+            padding: 0 7rem;
         }
 
         @include tablet {
-            padding: 2rem 3rem;
+            padding: 0 5rem;
             flex-direction: row;
             align-items: center;
             justify-content: center;
@@ -98,15 +106,6 @@
 
     &__icon {
         width: 2rem;
-    }
-
-    &__title {
-        font-size: $mobi-sub-title;
-        margin: 0;
-
-        @include tablet {
-            font-size: 1.5rem;
-        }
     }
 
     &__info {
