--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -20,6 +20,12 @@
   }
 }
 
+@mixin bigger-tablet {
+  @media (min-width: $bigger-tab-breakpoint) {
+    @content;
+  }
+}
+
 @mixin bigger-desktop {
   @media (min-width: $bigger-desktop-breakpoint) {
     @content;
