--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -8,8 +8,9 @@ $body-typeface: 'Poppins', Arial, sans-serif;
 // MEDIA QUERIES
 $tablet-breakpoint: 47.938rem; /* 767px */
 $desktop-breakpoint: 80rem; /* 1280px */
-$bigger-mobile-breakpoint: 34.375rem;
-$bigger-desktop-breakpoint: 89.688rem;
+$bigger-mobile-breakpoint: 34.375rem; /*550px*/
+$bigger-tab-breakpoint: 51.25rem; /*820px*/
+$bigger-desktop-breakpoint: 89.688rem; /*1435px*/
 
 
 //Font-size
