Adjust padding of all comp

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -9,18 +9,29 @@
         margin: 1rem 0 0 0;
     }
     
-
     &__title {
         text-align: center;
         margin: 0;
     }
 
+    &__info-box {
+        @include desktop {
+            display: flex;
+            justify-content: space-evenly;
+        }
+    }
+
     &__section-container{
         
-        @include bigger-tablet {
+        @include tablet {
             display: flex;
             justify-content: space-evenly;
             padding: 0 5rem;
+        }
+
+        @include desktop {
+            flex-direction: column;
+            padding: 0 13rem;
         }
     }
 
@@ -28,10 +39,6 @@
         padding: 0 2rem;
 
         @include tablet {
-            padding-left: 5rem;
-        }
-
-        @include bigger-tablet {
             padding: 0;
         }
     }
@@ -40,22 +47,27 @@
         padding: 0 2rem;
 
         @include tablet {
-            padding-left: 5rem;
-        }
-
-        @include bigger-tablet {
             padding: 0;
         }
     }
 
     &__subheader {
         margin-bottom: 0;
+
+        @include desktop {
+            margin: 2rem 0;
+        }
     }
 
     &__container {
         display: flex;
         align-items: center;
         gap: 2rem;
+
+        @include desktop {
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 
     &__logo {
@@ -73,6 +85,12 @@
     &__list {
         list-style: none;
         padding: 0;
+
+        @include desktop {
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 1rem;
+        }
     }
 
     &__item {
@@ -209,18 +227,27 @@
         flex: 1;
     }
 
-    &__arrow-container {
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    &__skills-section{
+    &__skills-dropdown-menu{
         padding: 0 2rem 2rem 2rem;
 
         @include tablet{
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 0 0 2rem 0;
+        }
+    }
+
+    &__skills-subheader {
+        text-align: left;
+        padding: 0 2rem;
+
+        @include tablet {
+            padding-left: 6rem;
+        }
+
+        @include desktop {
+            padding: 0 13rem;
         }
     }
 }
