--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -7,11 +7,16 @@
 
     &__text-p1 {
         text-align: center;
+        margin: 1rem 0 0 0;
     }
 
     &__title {
         text-align: center;
-        margin: 1rem;
+        margin: 0 0 1rem 0;
+
+        @include desktop {
+            margin: 0 0 2rem 0;
+        }
     }
 
     &__details-container {
