--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -9,7 +9,7 @@
 
 body, html {
     font-family: "Gaegu";
-    background-color: rgb(251, 251, 251) ;
+    background-color: #EEEEEE;
     color:rgb(34, 40, 49);
 }
 
