--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -11,55 +11,150 @@
     &__title {
         text-align: center;
         margin: 0 0 1rem 0;
-
     }
 
-    &__outer-container {
-        padding: 0 1.5rem;
-        display: flex;
-        justify-content: center;
+    // &__outer-container {
+    //     padding: 0 1.5rem;
+    //     display: flex;
+    //     justify-content: center;
         
+    // }
+
+    // &__info-box {
+    //     @include border-box;
+    //     padding: 1rem;
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: center;
+
+    //     @include tablet {
+    //         flex-direction: row;
+    //         justify-content: center;
+    //         gap: 2rem;
+    //         width: 65%;
+    //     }
+
+    //     @include desktop {
+    //         width: 40%;
+    //     }
+    // }
+
+    // &__info-container {
+    //     display: flex;
+    //     align-items: center;
+    //     gap: 1rem;
+    // }
+
+    // &__icon {
+    //     height: 2rem;
+    //     cursor: default;
+
+    //     &--email {
+    //         height: 2.5rem;
+    //     }
+    // }
+
+    // &__text {
+    //     font-size: $mobi-paragraph;
+
+    //     @include tablet {
+    //         font-size: $tablet-paragraph;
+    //     }
+    // }
+
+    &__screen {
+        position: relative;
+        background-color: #fbfbfb;
+        border: 0.625rem solid #EEEEEE;
+        border-radius: 0.9375rem ;
     }
 
-    &__info-box {
-        @include border-box;
-        padding: 1rem;
+    &__screen-header{
+        display: flex;
+        background-color: #4d4d4f;
+        border-top-right-radius:.9375rem;
+        border-top-left-radius: .9375rem;
+        padding: .625rem 1.25rem;
+
+        &--left {
+            margin-right: auto;
+        }
+    }
+
+    &__header-button {
+        display: inline-block;
+        width: .5rem;
+        height: .5rem;
+        margin-right: .1875rem;
+        border-radius: .5rem;
+
+        &--close {
+            background-color: #789dbc;
+        }
+
+        &--maximize {
+            background-color: #ffb26f;
+        }
+
+        &--minimize {
+            background-color: #c5705d;
+        }
+
+        &--ellipsis{
+            width: .1875rem;
+            height: .1875rem;
+            margin-left: .125rem;
+            border-radius: .5rem;
+            background-color: #eee;
+        }
+    }
+
+    &__screen-content{
+        padding: 2rem;
+    }
+
+    &__screen-item{
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        @include tablet {
-            flex-direction: row;
-            justify-content: center;
-            gap: 2rem;
-            width: 65%;
-        }
-
-        @include desktop {
-            width: 40%;
-        }
+        justify-content: center;
     }
 
-    &__info-container {
+    &__header{
+        font-size: 2.5rem;
+
+    }
+
+    &__screen-text{
+        text-align: center;
+        margin-top: 0;
+    }
+
+    &__input-section{
         display: flex;
+        background-color: rgba(0, 0, 0, 0.06);
+    }
+
+    &__form-label{
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        gap: 1rem;
+        justify-content: center;
+        margin: 0 1rem;
     }
 
-    &__icon {
-        height: 2rem;
-        cursor: default;
-
-        &--email {
-            height: 2.5rem;
-        }
-    }
-
-    &__text {
-        font-size: $mobi-paragraph;
-
-        @include tablet {
-            font-size: $tablet-paragraph;
-        }
+    &__input-name{
+        font: inherit;
+        letter-spacing: inherit;
+        color: currentcolor;
+        border: 0px;
+        box-sizing: content-box;
+        background: none;
+        height: 1.4375em;
+        margin: 0px;
+        display: block;
+        min-width: 0px;
+        width: 100%;
+        padding: 25px 12px 8px 0px;
     }
 }
