--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -16,11 +16,13 @@
 
     &__text-p1 {
         margin: 0;
+        color: #648cb6;
     }
 
     &__title {
         margin: 0;
         font-size: 1.5rem;
+        color: #789dbc;
 
         @include tablet {
             font-size: 2rem;
