--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -77,6 +77,24 @@
         }
     }
 
+    &__success-message{
+        all: unset;
+        display: block;
+        color: #6962ad;
+        text-align: center;
+        font-size: 1.2rem;
+        margin: 0 auto;
+        font-weight: 600;
+
+        @include tablet {
+            font-size: 1.7rem;
+        }
+
+        @include desktop {
+            font-size: 2.2rem;
+        }
+    }
+
     &__screen-content{
         padding: 2rem;
         background-color: #fbfbfb;
@@ -175,7 +193,7 @@
 
     &__input-message{
         width: 100%;
-        padding: 1rem;
+        padding: 0.5rem;
         font-size: 1rem;
         resize: vertical; 
         font-family: inherit;
@@ -184,6 +202,10 @@
         border: 0px;
         box-sizing: content-box;
         background: none;
+
+        @include tablet {
+            font-size: 1.3rem;
+        }
     }
 
     &__btn-container {
